# flutter-with-tracktion-engine

./: .gitignore  .gitmodules  README.md  pubspec.yaml
engine/: CMakeLists.txt  build.ps1
engine/src/: CMakeLists.txt  DemoEngine.cpp  DemoEngine.hpp  SineToneGenerator.cpp  SineToneGenerator.hpp  SineTonePlayer.cpp  SineTonePlayer.hpp  main.cpp
lib/: main.dart  sine_tone_player.dart
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
